syntax = "proto3";

option go_package = "github.com/jmsadair/raft/internal/protobuf";

message LogEntry {
    uint64 index  = 1;
    uint64 term   = 2;
    int64  offset = 3;
    bytes  data   = 4;
}

message AppendEntriesRequest {
    string            leaderId     = 1;
    uint64            term         = 2;
    uint64            leaderCommit = 3;
    uint64            prevLogIndex = 4;
    uint64            prevLogTerm  = 5;
    repeated LogEntry entries      = 6;
}

message AppendEntriesResponse {
    uint64 term          = 1;
    uint64 index   = 2;
    bool   success       = 3;
}

message RequestVoteRequest {
    string candidateId  = 1;
    uint64 term         = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm  = 4;
}

message RequestVoteResponse {
    uint64 term        = 1;
    bool   voteGranted = 2;
}

message InstallSnapshotRequest {
    uint64 term              = 1;
    string leader            = 2;
    uint64 lastIncludedIndex = 3;
    uint64 lastIncludedTerm  = 4;
    uint64 offset            = 5;
    bytes  data              = 6;
    bool   done              = 7;
}

message InstallSnapshotResponse {
    uint64 term = 1;
}

message StorageState {
    uint64 term     = 1;
    string votedFor = 2;
}

message Snapshot {
    uint64 lastIncludedIndex = 1;
    uint64 lastIncludedTerm = 2;
    bytes data = 3;
}

service Raft {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
    rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse) {}
}